# seam-carving2

./: CMakeLists.txt  README.md  USAGE.md  main.cpp  main_omp.cpp  performance_analysis.md  report.md  seam_carving.cpp
cuda/: CMakeLists.txt  README.md  data_structures.h  dp_kernel.cu  hybrid_energy_kernel.cu  luminance_kernel.cu  main_cuda.cpp  seam_carving_cuda.cpp  seam_carving_cuda.h  visualization.cpp  visualization.h  visualization_kernel.cu
cuda_seam_carving/: CMakeLists.txt  Makefile  README.md  cuda_kernels.cu  cuda_kernels.cuh  cuda_seam_carving.cpp
cuda_sr/: README.md  cuda_utils.h  data_structures.h  dp_kernel.cu  energy_kernels.cu  hybrid_energy_kernel.cu  luminance_kernel.cu  main_cuda.cpp  seam_carving_cuda.cpp  seam_carving_cuda.cuh  seam_carving_cuda.h  seam_kernel.cu
mpi/: CMakeLists.txt  PERFORMANCE.md  README.md  mpi_impl.cpp
openmp/: CMakeLists.txt  omp_impl.cpp
openmp_seam_carving/: CMakeLists.txt  openmp_impl.cpp
sequential/: CMakeLists.txt  sequential_impl.cpp
